tests/syntax_error/generic_bad_typevar.jou
class Foo[2]:  # Error: expected name of a generic type variable (typically 'T'), got an integer
    pass
